--- a/public/package.json
+++ b/public/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.25.0",
     "buffer": "^6.0.3",
     "emoji-picker-react": "^3.5.1",
+    "express": "^4.18.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
